--- a/src/common.module.scss
+++ b/src/common.module.scss
@@ -1,3 +1,5 @@
+$tBlue: #1d9bf0;
+$tGray: #868a8c;
 .input {
   border: solid 1px #cfd9de;
   border-radius: 5px;
@@ -5,4 +7,5 @@
   padding: 0 10px;
   box-sizing: border-box;
   margin-bottom: 20px;
+  width: 1000px;
 }
