--- a/src/containers/Register/index.module.scss
+++ b/src/containers/Register/index.module.scss
@@ -14,15 +14,31 @@
 }
 .form {
   margin: 0, 30px;
+  text-align: center;
 }
 .changeTypeButton {
   color: $tBlue;
+  text-align: center;
 }
 .birthTitle {
+  text-align: center;
   font-size: 20px;
   color: #000;
   font-weight: 700;
 }
 .footer {
   text-align: center;
+}
+.footerButtonDisabled {
+  margin: 0 auto;
+  border-radius: 50px;
+  background-color: $tGray;
+  color: #fff;
+  font-size: 16px;
+  width: 30%;
+  height: 40px;
+}
+.footerButton {
+  composes: footerButtonDisabled;
+  background-color: #000;
 }
