--- a/src/components/Nav/index.module.scss
+++ b/src/components/Nav/index.module.scss
@@ -1,14 +1,16 @@
 @import '../../common.module.scss';
 
 .nav {
-  display: flex;
   justify-content: space-between;
-  align-items: center;
-  height: 900px;
-}
-.icon{
-  margin-left: 45px;
-  height: 40px;
+  height: 100%;
+  width: 70%;
+  overflow: auto;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  top: 80px;
+  bottom: 0;
+  right: 20px;
 }
 .container {
   margin: 0, 30px;
@@ -30,4 +32,7 @@
 .userProfile {
   position: 'relative';
   bottom: 0px;
+}
+.postTweet {
+  text-align: center;
 }
