--- a/src/containers/Register/index.module.scss
+++ b/src/containers/Register/index.module.scss
@@ -13,7 +13,7 @@
   line-height: 68px;
 }
 .form {
-  margin: 0, 30px;
+  margin: 40px 40px;
   text-align: center;
 }
 .changeTypeButton {
@@ -61,6 +61,10 @@
 }
 .showTip {
   color: red;
-  font-szie: 14px;
+  font-size: 14px;
   margin-top: 5px;
+}
+.icon{
+  margin-left: 45px;
+  height: 40px;
 }
