feat: 🎸 Single tweet page and user profile

--- a/src/common.module.scss
+++ b/src/common.module.scss
@@ -1,7 +1,10 @@
+
 $tBlue: #1d9bf0;
 $tGray: #868a8c;
 $tGrayWhite: #cfd9de;
-
+$tFontColor: #536471;
+$tBorderColor: #eee;
+$tBlackColor: #0f1419;
 .input {
   border: solid 1px $tGrayWhite;
   border-radius: 5px;
