--- a/src/components/ImageCard/index.module.scss
+++ b/src/components/ImageCard/index.module.scss
@@ -93,16 +93,9 @@
     border-top: solid 2px #fff;
   }
 }
-.image-gallery.fullscreen-modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 10000;
-}
+
 .modal {
-  position: fixed;
+  position: relative;
   top: 0;
   left: 0;
   z-index: 999;
@@ -110,8 +103,8 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: top;
+  align-items: top;
   overflow: hidden;
 }
 
@@ -123,7 +116,7 @@
   background-color: white;
   position: relative;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: top;
+  align-items: top;
   overflow: hidden;
 }
