--- a/src/components/Nav/index.module.scss
+++ b/src/components/Nav/index.module.scss
@@ -36,3 +36,16 @@
 .postTweet {
   text-align: center;
 }
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  color: $tBlackColor;
+  font-size: 16px;
+  font-weight: 700;
+  height: 50px;
+  border-top: 1px solid $tBorderColor;
+  line-height: 50px;
+  padding-left: 15px;
+}
