--- a/src/containers/Login/index.module.scss
+++ b/src/containers/Login/index.module.scss
@@ -16,7 +16,7 @@
 .goToRegister {
   margin-right: 890px;
   font-size: 14px;
-  Link {
-    margin-left: 5px;
-  }
+}
+.Link {
+  margin-left: 5px;
 }
