feat: 🎸 Update comment page and single tweet page

--- a/src/containers/Tweet/index.module.scss
+++ b/src/containers/Tweet/index.module.scss
@@ -4,6 +4,8 @@
   background-color: #fff;
 }
 .contentContainer {
+  width: 500px;
+  min-height: 400px;
   margin-top: 40px;
   margin-left: 30%;
   margin-right: 30%;
