--- a/src/components/Avatar/index.module.scss
+++ b/src/components/Avatar/index.module.scss
@@ -1,18 +1,22 @@
 @import '../../common.module.scss';
 
-.avatarWrap {
-  height: 25px;
-  width: 25px;
-  border-radius: 50%;
-  overflow: hidden;
-  background-color: $tGrayWhite;
-  color: #fff;
-  text-align: center;
-}
-.icon {
-  height: 100%;
+.avatarContainer {
+  width: 50px;
+  display: inline-block;
+  vertical-align: top;
 }
 .avatar {
-  width: 100%;
-  height: 100%;
+  height: 45px;
+  width: 45px;
+  border-radius: 50%;
+}
+.avatarButton {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+.avatarButton:focus {
+  outline: none;
 }
