--- a/src/containers/Login/index.module.scss
+++ b/src/containers/Login/index.module.scss
@@ -1,5 +1,29 @@
 @import '../../common.module.scss';
 
+.wrap {
+  composes: wrap from '../../common.module.scss';
+
+}
+.login {
+  composes: login from '../../common.module.scss';
+
+}
+
+.left {
+  composes: left from '../../common.module.scss';
+
+}
+
+.left img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.right {
+  composes: right from '../../common.module.scss';
+
+}
 .input {
   composes: input from '../../common.module.scss';
 }
@@ -14,7 +38,8 @@
   background-color: #000;
 }
 .goToRegister {
-  margin-right: 890px;
+  width: 100px;
+  margin-right: 250px;
   font-size: 14px;
 }
 .Link {
