--- a/src/containers/Register/index.module.scss
+++ b/src/containers/Register/index.module.scss
@@ -52,6 +52,12 @@
   color: #000;
   font-weight: 700;
 }
+.invTitle {
+  text-align: center;
+  font-size: 10px;
+  color: #000;
+  font-weight: 500;
+}
 .footer {
   margin-bottom: 10px;
   text-align: center;
