--- a/src/components/CommentCard/index.module.scss
+++ b/src/components/CommentCard/index.module.scss
@@ -12,7 +12,8 @@
     border-radius: 50%;
     vertical-align: top;
   }
-  .right {
+  .rightPart {
+    min-height: 50px;
     width: calc(100% - 50px);
     display: inline-block;
     padding: 0 10px 5px 10px;
