--- a/src/containers/Tweet/index.module.scss
+++ b/src/containers/Tweet/index.module.scss
@@ -5,7 +5,6 @@
 }
 .contentContainer {
   max-width: 638px;
-  min-height: 400px;
   margin-top: 40px;
   margin-left: 30%;
   margin-right: 30%;
@@ -22,9 +21,9 @@
       border-radius: 50%;
     }
   
-    .right {
+    .rightPart {
       height: 60px;
-      margin: 5px 15px 15px 15px;
+      margin: 35px 15px 15px 15px;
       display: flex;
       width: calc(100% - 60px);
       align-items: left;
