--- a/src/containers/Tweets/index.module.scss
+++ b/src/containers/Tweets/index.module.scss
@@ -1,3 +1,5 @@
+@import '../../common.module.scss';
+
 .Header{
     font-size: 20px;
     font-weight: bold;
@@ -30,7 +32,7 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  flex: 1 1 800px;
+  flex: 1 1 600px;
   padding: 30px;
   margin-left: 300px;
   margin-right: 300px;
@@ -38,7 +40,7 @@
   background-color: #f5f5f5;
   border-radius: 4px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  min-width: 800px;
+  min-width: 600px;
 }
 
 .rightSider {
@@ -55,4 +57,26 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+.searchContainer {
+  width: 600px;
+  display: flex;
+  margin-top: 25px;
+  margin-bottom: 1rem;
+  gap: 0.5rem;
+  justify-content: center;
+  align-items: center;
+  .searchInput {
+    border: solid 1px $tGrayWhite;
+    border-radius: 25px;
+    height: 43px;
+    padding-left: 30px;
+    box-sizing: border-box;
+    width: 350px;
+  }
   
+  .closeIcon {
+    position: absolute;
+    left: calc(50% - 375px);
+    font-size: 22px;
+    }
+}
